objects/Location.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_AgreementEndDate__c</fullName>
        <description>Agreement Start Date for Ex-space location Object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement End Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AgreementNumber__c</fullName>
        <description>Agreement number for Ex-space  location Object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AgreementStartDate__c</fullName>
        <description>Agreement Start Date for Ex-space location object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Start Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AlternateReportingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alternate Reporting Contact for Ex-space location Object.</description>
        <label>Alternate Reporting  Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_BinSpace__c</fullName>
        <description>Bin Space for EX-space location object.</description>
        <label>Bin Space</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_City__c</fullName>
        <description>This field city is created for the location object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerTotalInventory__c</fullName>
        <description>Customer Total Inventory for Ex-space Location object.</description>
        <label>Customer Total Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpeditionPointValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expedition Point Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpeditionPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Point</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Expedition Points</relationshipLabel>
        <relationshipName>Expeditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExspaceID__c</fullName>
        <description>This field is to store the Unique Salesforce Exspace ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exspace ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastInventoryDate__c</fullName>
        <description>LastInventoryDate For Exspace Location Object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Inventory Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LocationID__c</fullName>
        <description>It identifies the location Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MinimumTons__c</fullName>
        <description>Minimum tons for EX-Space</description>
        <label>Minimum Tons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Plant__c</fullName>
        <description>Indicates Plant Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plant</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PostalCode__c</fullName>
        <description>This field is created for Location postal code</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to check product details</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <description>This  field is created for Location Object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPLocationId__c</fullName>
        <description>Created as part of GDASF-8811 - This holds the 4-digit Plant id and acts as external unique key to relate with Product Location object. This fields should hold a value during import.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Location Id</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPProductCode__c</fullName>
        <description>This field is to display the product SAP code</description>
        <formula>PMC_CPQ_ProductName__r.PMC_CPQ_SAPProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOrg__c</fullName>
        <description>Sales Organization ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Org</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store the Ship to Account</description>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations (Ship To Account)</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipToSAPId__c</fullName>
        <description>This field is to store the Location where ship to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship To SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store the Sold to Account</description>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations(Sold To Account)</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldToSAPId__c</fullName>
        <description>This field is to store the Sold to SAP ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sold To SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Street__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TaxCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UnitOfMeasurement__c</fullName>
        <description>This field will store the Unit of measurement.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Of Measurement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_WarehouseTypeName__c</fullName>
        <description>This field is created to hold the Warehouse type name for the given product</description>
        <label>Warehouse Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShefaliTest__c</fullName>
        <description>This is created for POC purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ShefaliTest</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_Origin</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_WarehouseTypeName__c</columns>
        <columns>LocationType</columns>
        <filterScope>Everything</filterScope>
        <label>All_Origin</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_ActiveExclusiveSpaces</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_ProductName__c</columns>
        <columns>PMC_CPQ_ShipToAccount__c</columns>
        <columns>PMC_CPQ_SoldToAccount__c</columns>
        <columns>PMC_CPQ_BinSpace__c</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LocationType</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filters>
        <label>Active Exclusive Spaces</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_AllExclusiveSpaces</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_ProductName__c</columns>
        <columns>PMC_CPQ_ShipToAccount__c</columns>
        <columns>PMC_CPQ_SoldToAccount__c</columns>
        <columns>PMC_CPQ_BinSpace__c</columns>
        <columns>LastModifiedBy</columns>
        <columns>PMC_CPQ_SAPLocationId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Exclusive Spaces</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_InactiveExclusiveSpaces</fullName>
        <columns>Name</columns>
        <columns>PMC_CPQ_ProductName__c</columns>
        <columns>PMC_CPQ_ShipToAccount__c</columns>
        <columns>PMC_CPQ_SoldToAccount__c</columns>
        <columns>PMC_CPQ_BinSpace__c</columns>
        <columns>LastModifiedBy</columns>
        <filterScope>Mine</filterScope>
        <label>Inactive Exclusive Spaces</label>
    </listViews>
    <recordTypes>
        <fullName>PMC_CPQ_ExSpace_Loaction</fullName>
        <active>true</active>
        <description>This record type created to customize ExSpace record user interface</description>
        <label>ExSpace Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_CPQ_ExpeditionPoint</fullName>
        <active>true</active>
        <label>Expedition Point</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_CPQ_Origin_Location</fullName>
        <active>true</active>
        <description>This record type created to customize Origin record user interface</description>
        <label>Origin Location</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>